[package]
name = "grpc-by-tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "*"
prost = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
anyhow = "*"

[build-dependencies]
tonic-build = "*"
